Fixed spacing on about me page

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@
 
 .mainContent {
   flex: 1 1 auto;
-  overflow: scroll;
 }
 
 body > #root > div {
