--- a/src/Components/Skill/Skill.css
+++ b/src/Components/Skill/Skill.css
@@ -5,10 +5,7 @@
     background-color: #FFFFFF;
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
     padding: 30px;
-    margin: 0 auto;
-    max-width: 600px;
-    margin-top: 30px;
-    margin-bottom: 50px;
+    margin: 30px;
 }
 
 .skill {
